[package]
name = "nimiq-fork-proof-pool"
version = "0.1.0"
authors = ["The Nimiq Core Development Team <info@nimiq.com>"]
edition = "2018"
description = "Fork proof pool implementation for Nimiq"
homepage = "https://nimiq.com"
repository = "https://github.com/nimiq/core-rs-albatross"
license = "Apache-2.0"
categories = ["cryptography::cryptocurrencies"]
keywords = ["nimiq", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[dependencies]
failure = "0.1"

beserial = { path = "../beserial", version = "0.1" }
nimiq-block-albatross = { path = "../primitives/block-albatross", version = "0.1" }
nimiq-blockchain-albatross = { path = "../blockchain-albatross", version = "0.1" }
nimiq-collections = { path = "../collections", version = "0.1", features = ["bitset"] }
nimiq-hash = { path = "../hash", version = "0.1" }
nimiq-primitives = { path = "../primitives", version = "0.1", features = ["policy"] }
